[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-quip"
version = "1.0.0"
description = "Witty commit message generator that enforces conventional commits with personality"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "commit-quip contributors"}]
keywords = ["git", "commit", "conventional-commits", "humor", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
commit-quip = "commit_quip.cli:main"

[tool.setuptools.packages.find]
include = ["commit_quip*"]
